# yema

./: .gitignore  AGENTS.MD  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  install.sh  pyproject.toml
.github/workflows/: publish.yml
yema/: init.py  main.py  qb.py  tracker_map.py
yema/clients/: qbittorrent.py  transmission.py  yemapt.py
yema/commands/: qb.py  transmission.py
yema/config/: __init__.py  debug.py  utils.py
yema/core/: debug.py  formatting.py  terminal.py
yema/domain/: torrent_files.py  trackers.py
yema/filesystems/: __init__.py  base.py
yema/services/: torrents.py
yema/storage/: cache.py
yema/ui/: screens.py
