[project]
name = "yema"
version = "0.1.3"
description = "yemapt/qBittorrent helper for seeding and torrent checks"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "mustangpt", email = "admin@yemapt.org" }
  ]
keywords = ["yemapt", "qbittorrent", "torrent", "seeding", "pt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: Utilities",
]
dependencies = [
    "paramiko>=3.4.0",
    "typer>=0.9.0",
    "wcwidth>=0.2.6",
]

[project.scripts]
yema = "yema.main:main"

[project.urls]
Homepage = "https://github.com/YemaPT/yema"
Repository = "https://github.com/YemaPT/yema"
Issues = "https://github.com/YemaPT/yema/issues"

[build-system]
requires = ["hatchling>=1.16.0"]
build-backend = "hatchling.build"

[tool.uv]
# uv 会自动识别 pyproject.toml 中的项目依赖。
# 这里可以添加 uv 特定配置，例如运行环境、锁文件位置等。

[tool.hatch.build.targets.wheel]
packages = ["yema"]

[dependency-groups]
dev = [
    "build>=1.2.2,<1.5.0",
    "twine>=6.2.0",
]
